--- a/.prettierrc
+++ b/.prettierrc
@@ -6,12 +6,11 @@
     "printWidth": 80,
     "plugins": [
         "prettier-plugin-organize-imports",
+        "@prettier/plugin-php",
+        "prettier-plugin-blade",
         "prettier-plugin-tailwindcss"
     ],
-    "tailwindFunctions": [
-        "clsx",
-        "cn"
-    ],
+    "tailwindFunctions": ["clsx", "cn"],
     "tailwindStylesheet": "resources/css/app.css",
     "tabWidth": 4,
     "overrides": [
@@ -19,6 +18,13 @@
             "files": "**/*.yml",
             "options": {
                 "tabWidth": 2
+            }
+        },
+        {
+            "files": ["*.blade.php"],
+            "options": {
+                "parser": "blade",
+                "tabWidth": 4
             }
         }
     ]
